[gd_scene load_steps=3 format=3 uid="uid://cw7ac0hkgdjum"]

[ext_resource type="Script" path="res://Mainmenu.gd" id="1_fjicg"]
[ext_resource type="FontFile" uid="uid://hkck2hatxl55" path="res://CAMBRIA.TTC" id="2_jpevu"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjicg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.309028
anchor_top = 0.0679012
anchor_right = 0.690972
anchor_bottom = 0.932099
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_right = 138.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.945405, 0.695933, 0.37249, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.988824, 0.880419, 0.754692, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_jpevu")
theme_override_font_sizes/font_size = 128
text = "Ï€"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -151.0
offset_top = 82.0
offset_right = 151.0
offset_bottom = 233.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.192157, 0.305882, 0.756863, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.331452, 0.471315, 0.920252, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_jpevu")
theme_override_font_sizes/font_size = 42
text = "Math Champions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.186364
anchor_top = 0.448214
anchor_right = 0.813636
anchor_bottom = 0.857143
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Tutorial" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Tutorial"

[node name="Inventory" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"

[node name="Leaderboard" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Leaderboard"

[node name="Log Out" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Log Out"

[node name="Quit" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[connection signal="pressed" from="Panel/GridContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Inventory" to="." method="_on_inventar_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Log Out" to="." method="_on_log_out_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Quit" to="." method="_on_quit_pressed"]
